# CppDevOps

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
HelloWorld/: CMakeLists.txt  HelloWorld.cpp
